Use compatible Gson array access